# random-name

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
random_name/: __init__.py  core.py
tests/: test_random_name.py
